--- a/config/config.main.json
+++ b/config/config.main.json
@@ -22,7 +22,7 @@
         "100054677207079"
     ],
     "NAME": "Xavia",
-    "PREFIX": "x",
+    "PREFIX": ".",
     "timezone": "Asia/Ho_Chi_Minh",
     "REFRESH": "43200000",
     "MAX_BALANCE_LIMIT": "-1"
